--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
-      window.location.href("https://techwb.org");
+      window.location.href = "https://techwb.org";
     </script>
     <title>Technology Without Borders</title>
   </head>
